Changed nav position to fixed, hope to fix positioning on mobile.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,7 +180,7 @@ nav {
   background-color: whitesmoke;
 }
 nav {
-  position: absolute;
+  position: fixed;
 }
 .ol-zoom {
   top: 65px;
